--- a/frontend/sass/_text.scss
+++ b/frontend/sass/_text.scss
@@ -32,12 +32,15 @@ body {
   font-size: $h1-font-size;
   font-weight: $font-weight-heavy;
   padding-bottom: 16px;
-  padding-right: 40px;
 
   @media screen and (max-width: $mobile-size) {
-    font-size: 2.25em;
-    padding-bottom: $spacing-xl;
-    padding-right: 0;
+    h1 {
+      font-size: 2.25rem;
+      padding-bottom: $spacing-xl;
+      padding-right: 0;
+    }
+
+    width: 100%;
   }
 }
 
@@ -51,7 +54,7 @@ body {
   padding: $spacing-lg;
 
   > *:first-child {
-    margin-bottom: 1.5em;
+    margin-bottom: $spacing-med;
   }
 
   .usa-hero-callout-stats {
@@ -88,6 +91,10 @@ h6 {
   margin-top: .5em;
 }
 
+h1 {
+  font-size: $h1-font-size;
+}
+
 h2 {
   color: $heading-contrast-color;
   font-size: $h2-font-size;
@@ -98,12 +105,23 @@ h3 {
 }
 
 h4 {
+  color: $color-gray-dark;
   font-size: $h4-font-size;
   line-height: $h4-line-height;
 }
 
 h5 {
   font-size: $h5-font-size;
+}
+
+h6 {
+  color: $color-gray-darkest;
+  font-size: $h6-font-size;
+  line-height: $h6-line-height;
+}
+
+a {
+  color: $link-color;
 }
 
 p {
